force-app/main/default/objects/Transport_Daily_Report__c/Transport_Daily_Report__c.object-meta.xml
<CustomObject>
    <label>Transport Daily Report</label>
    <nameField>
        <displayFormat>TDR-{000}</displayFormat>
        <label>Transport Daily Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transport Daily Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>