force-app/main/default/objects/Transport_Daily_Report__c/fields/All_related_records_are_complete__c.field-meta.xml
<CustomField>
    <fullName>All_related_records_are_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status of TJ, DA, DSJ, DSJS are in final state (e.g. approved, completed, cancelled)</description>
    <label>All related records are complete</label>
    <type>Checkbox</type>
</CustomField>