force-app/main/default/objects/Transport_Daily_Report__c/fields/Duplicate_TDR__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_TDR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate TDR</label>
    <type>Checkbox</type>
</CustomField>