force-app/main/default/objects/Transport_Daily_Report__c/fields/Refresh_Transport_Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Transport_Daily_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Refresh Transport Daily Report</label>
    <type>Checkbox</type>
</CustomField>