force-app/main/default/objects/Transport_Daily_Report__c/fields/TDR_valid_for_Auto_Refresh_formula__c.field-meta.xml
<CustomField>
    <fullName>TDR_valid_for_Auto_Refresh_formula__c</fullName>
    <description>This field is used in FLOW automation. Set to TRUE if within 30days.</description>
    <formula>IF((TODAY() -  Report_Date__c) &lt; 31, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TDR valid for Auto-Refresh</label>
    <type>Checkbox</type>
</CustomField>