force-app/main/default/objects/Transport_Daily_Report__c/fields/Transport_Base__c.field-meta.xml
<CustomField>
    <fullName>Transport_Base__c</fullName>
    <formula>IF(CONTAINS(Unit__r.Name, &apos;Moomba&apos;), &apos;Moomba&apos;, 
  IF(CONTAINS(Unit__r.Name, &apos;Roma&apos;), &apos;Roma&apos;, &apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on the Unit selected</inlineHelpText>
    <label>Transport Base</label>
    <type>Text</type>
</CustomField>