force-app/main/default/objects/Transport_Daily_Report__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit__c.Unit_Type__c</field>
            <operation>equals</operation>
            <value>Transport</value>
        </filterItems>
        <filterItems>
            <field>Unit__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Unit__c.Cost_Allocation_Unit__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Transport Daily Reports</relationshipLabel>
    <relationshipName>Transport_Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>