force-app/main/default/objects/Transport_Daily_Report__c/validationRules/DuplicateTDR.validationRule-meta.xml
<ValidationRule>
    <fullName>DuplicateTDR</fullName>
    <active>true</active>
    <description>There is an existing Transport Daily Report with same Unit and Report Date.</description>
    <errorConditionFormula>AND(
  Duplicate_TDR__c
)</errorConditionFormula>
    <errorMessage>There is an existing Transport Daily Report with same Unit and Report Date.</errorMessage>
</ValidationRule>