force-app/main/default/objects/Transport_Daily_Report__c/validationRules/IncompleteTDR.validationRule-meta.xml
<ValidationRule>
    <fullName>IncompleteTDR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISCHANGED( Status__c ),
   ISPICKVAL(Status__c, &apos;Closed&apos;),
   NOT( All_related_records_are_complete__c )
)</errorConditionFormula>
    <errorMessage>Please ensure all related records are approved or complete before changing the status to Closed.</errorMessage>
</ValidationRule>