force-app/main/default/objects/Transport_Daily_Report__c/listViews/roma_TDR_all.listView-meta.xml
<ListView>
    <fullName>roma_TDR_all</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Unit__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Transport - Roma</value>
    </filters>
    <label>Roma | TDR</label>
    <sharedTo>
        <group>BOO</group>
        <group>Managing_Director</group>
        <group>Transport</group>
    </sharedTo>
</ListView>