force-app/main/default/objects/Transport_Daily_Report__c/listViews/Roma_Transport.listView-meta.xml
<ListView>
    <fullName>Roma_Transport</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Unit__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Transport - Moomba</value>
    </filters>
    <label>Moomba | TDR</label>
</ListView>